fixed menu overlapping heatmap, and removed menu collapse button (animation transition looks too jerky)

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -59,15 +59,15 @@ span.bmd-form-group, span.is-filled {
   background: #eee;
   padding: 8px 0;
 
-    min-width: 280px;
-    max-width: 29vh;
-    max-height: 90vh;
+   min-width: 280px;
+   max-width: 29vh;
+   max-height: 90vh;
 
-    z-index: 999;
-    background: #7386D5;
-    color: #fff;
-    transition: all 0.5s cubic-bezier(0.945, 0.020, 0.270, 0.665);
-    transform-origin: left; /* Set the transformed position of sidebar to center left side. */
+   z-index: 999;
+   background: #7386D5;
+   color: #fff;
+   transition: all 0.5s cubic-bezier(0.945, 0.020, 0.270, 0.665);
+   transform-origin: left; /* Set the transformed position of sidebar to center left side. */
 }
 
 #input-form label {
@@ -80,7 +80,7 @@ span.bmd-form-group, span.is-filled {
 
 #input-form-sidebar.collapsible{
 
-        margin-left: -250px;
+    margin-left: -250px;
     transform: rotateY(1deg);
     min-width: 10px;
     max-width: 80px;
@@ -186,6 +186,7 @@ span.bmd-form-group, span.is-filled {
 }
 
 #input-form-collapse-button {
+    display: none;
     width: 40px;
     height: 40px;
     background: #f5f5f5;
@@ -241,10 +242,10 @@ span.bmd-form-group, span.is-filled {
     width: 72%;
     padding-right: 10px;
     padding-left: 15px;
-    margin-left: 35vh;
+    margin-left: 45vh;
     float: right;
-    transition: all 1.0s ;
-    z-index:99;
+    transition: all 1.5s ;
+    z-index: 199;
     position: relative;
     
 }
@@ -256,7 +257,8 @@ span.bmd-form-group, span.is-filled {
     margin-right: auto;
     margin-left: auto;
     transform: translate(-6em,0);
-    z-index:99;
+    transition: all 1.0s;
+    z-index: 199;
 
 }
 
